Changes related to Calendar,Customer and Service section

--- a/AngularMvcProject/App/View/Calendar/Calendar.html
+++ b/AngularMvcProject/App/View/Calendar/Calendar.html
@@ -154,6 +154,89 @@
             <li class="side-nav-tooltip blue_icon" data-toggle="tooltip" data-original-title="Premium" data-placement="right"> <a class="setmore-icon-shield-alert" href="#"><small>Premium</small></a> </li>
         </ul>
     </div>
+
+
+    <!--<button type="button" class="btn btn-primary btn-lg booking_btn" data-toggle="modal" data-target="#myModal">
+        Launch demo modal
+    </button>-->
+    <!-- Modal -->
+    <div class="modal fade booking_div" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Booking Page</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="side_left sidebrpadding">
+                        <ul class="list-unstyled">
+                            <li><a href="" title=""> <span><i class="fa fa-home sidebaricon" aria-hidden="true"></i><span class="sidebarcntent">OVERVIEW</span></span></a></li>
+                            <li><a href="" title=""> <span><i class="fa fa-building-o sidebaricon" aria-hidden="true"></i><span class="sidebarcntent">COMPANY DETAILS</span></span></a></li>
+                            <li><a href="" title=""> <span><i class="fa fa-clock-o sidebaricon active" aria-hidden="true"></i><span class="sidebarcntent active">BUSINESS HOURS</span></span></a></li>
+                            <li><a href="" title=""> <span><i class="fa fa-exclamation-triangle sidebaricon" aria-hidden="true"></i><span class="sidebarcntent">BOOKING POLICIES</span></span></a></li>
+                            <li><a href="" title=""> <span><i class="fa fa-pencil-square-o sidebaricon" aria-hidden="true"></i><span class="sidebarcntent">CUSTOMIZATION</span></span></a></li>
+                            <li><a href="" title=""> <span><i class="fa fa-star-o sidebaricon" aria-hidden="true"></i><span class="sidebarcntent">REVIEW</span></span></a></li>
+                        </ul>
+                    </div>
+                    <div class="business_right">
+                        <h3 class="businesshrs">Business Operating Hours</h3>
+                        <div class="drop_select">
+                            <label>Time Zone</label>
+                            <select class="form-control">
+                                <option value="(GMT +02:00) Central European Time - Andorra">(GMT +02:00) Central European Time - Andorra</option>
+                                <option value="(GMT +02:00) Central European Time - Brussels">(GMT +02:00) Central European Time - Brussels</option>
+                                <option value="(GMT +02:00) Central European Time - Rome">(GMT +02:00) Central European Time - Rome</option>
+                                <option value="(GMT +02:00) Central European Time - Vienna">(GMT +02:00) Central European Time - Vienna</option>
+                            </select>
+                        </div>
+                        <div class="staffWorkingHoursSec">
+                            <div class="colom_div" ng-repeat="timedata in businessHourInfo">
+                                <div class="row">
+                                    <div class="col-md-3 col-sm-3 col-xs-3 StaffColumnDiv ">
+                                        <div class="week_div">
+                                            <p>{{timedata.day}}</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-3 col-xs-3">
+                                        <div class="onoffswitch">
+                                            <input type="checkbox" name="onoffswitch" ng-model="timedata.available" class="onoffswitch-checkbox" checked>
+                                            <label class="onoffswitch-label" ng-click="switchOnOff(timedata)" for="myonoffswitch">
+                                                <span class="onoffswitch-inner"></span>
+                                                <span class="onoffswitch-switch"></span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-sm-6 col-xs-6 StaffColumnDiv">
+                                        <div class="week_div businessHourSelect businesshourDiv">
+                                            <select class="select_btn" ng-required="true" ng-model="timedata.timeFrom" ng-disabled="!timedata.available" ng-change="SetWorkingHours(timedata)">
+                                                <option ng-repeat="option in timeInfFrom" value="{{option}}">{{option}}</option>
+                                            </select>
+                                            <span>to</span>
+                                            <select class="select_btn" ng-required="true" ng-model="timedata.timeTo" ng-disabled="!timedata.available" ng-change="SetWorkingHours(timedata)">
+                                                <option ng-repeat="option in timeInfoTo" value="{{option}}">{{option}}</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="staff-hours-note popuopf">
+                                <span class="pfcntent">To change staff working hours and their availability in the calendar, <a id="note_navigate" href="javascript:void(0);">click here</a></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+                <!--<div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>-->
+            </div>
+        </div>
+    </div>
+
+
+
     <div class="right_section" id="calendar">
 
         <div id="" class="tab-content full-height">
@@ -258,9 +341,9 @@
                                         </ul>-->
                                         <ul class="nav nav-tabs calendarPopupDetail" role="tablist">
                                             <li role="presentation" class="active" id="Appointmenttab">
-                                                <a data-target="#calendardetail" ng-click="Appointmenttab()"  aria-controls="home" role="tab" data-toggle="tab">Details</a>
+                                                <a data-target="#calendardetail" ng-click="Appointmenttab()" aria-controls="home" role="tab" data-toggle="tab">Details</a>
                                             </li>
-                                            <li role="presentation" id= "Calendartab">
+                                            <li role="presentation" id="Calendartab">
                                                 <a data-target="#searchCustomer" ng-click="Calendartab()" aria-controls="profile">Customer</a>
                                             </li>
 
@@ -296,7 +379,7 @@
                                             <label class="control-label col-sm-4" for="pwd">Service</label>
                                             <div class="col-sm-8">
                                                 <div class="dropdown appointProvider">
-                                                    <select class="btn btn-default dropdown-toggle" name="Servicedd" data-ng-options="x.Id as x.Name for x in EmployeeServices" ng-model="selectedservice" ng-change="ServiceDetail(selectedservice)" aria-haspopup="true" aria-expanded="false" >
+                                                    <select class="btn btn-default dropdown-toggle" name="Servicedd" data-ng-options="x.Id as x.Name for x in EmployeeServices" ng-model="selectedservice" ng-change="ServiceDetail(selectedservice)" aria-haspopup="true" aria-expanded="false">
                                                         <option value="">-- Select a Service --</option>
                                                     </select>
                                                 </div>
@@ -381,7 +464,7 @@
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="Calendarcustomer">
                                     <div class="customerProfileDiv calendarCustomerSec">
-                                        <a class="calendarPopUpIcon"ng-click="CloseAddCustomertab()">×</a>
+                                        <a class="calendarPopUpIcon" ng-click="CloseAddCustomertab()">×</a>
                                         <!--<form class="form-horizontal imageUploadForm " action="">-->
                                         <div class="form-group appointaploadDiv">
                                             <label class="control-label col-md-3 col-sm-12 col-xs-3 customerUserDiv">
@@ -475,14 +558,14 @@
                                         <input type="text" class="form-control searchCustomerField" placeholder="Search Customer" ng-model="SearchCustomer" ng-change="GetSearchCustomer(SearchCustomer)" />
                                         <div class="apptcustomericon"><i class="fa fa-search" aria-hidden="true"></i></div>
                                         <ul class="searching-cust" style="display: block;" ng-show="counted >=1">
-                                                                                   
+
                                             <li ng-repeat="item in FilterCustomerList" ng-click="EditCustomer(item)">
                                                 <img src="../Content/Assets/images/provider_img2.png" />
-                                                <span>{{item.FirstName}}</span> 
-                                               
-                                            </li>                                           
+                                                <span>{{item.FirstName}}</span>
+
+                                            </li>
                                         </ul>
-                                       
+
                                     </div>
                                     <!--<div class="customerFieldDiv">
                                         <input type="text" class="form-control searchCustomerField" placeholder="Search Customer" ng-model="SearchCustomer" />
@@ -506,8 +589,8 @@
                         </div>
                         <div class="modal-footer" id="modalfooter">
                             <div class="btn-group apptSaveBtn" role="group">
-                                <button type="submit" class="btn btn-default"  ng-show="ShowSubmit==true">Save Appointment</button>
-                                <button type="button" class="btn btn-default"  ng-click="GotoCustomerTab()"  ng-disabled="ContinueAppointment" ng-show="ShowSubmit==false">Continue</button>
+                                <button type="submit" class="btn btn-default" ng-show="ShowSubmit==true">Save Appointment</button>
+                                <button type="button" class="btn btn-default" ng-click="GotoCustomerTab()" ng-disabled="ContinueAppointment" ng-show="ShowSubmit==false">Continue</button>
                             </div>
                             <!--<div class="apptViewFooter">
                                 <a href="#" class="apptDeleteBtn">Delete</a>
@@ -520,9 +603,9 @@
         <div id="modalPopupbg" class="fade modal_bg in"></div>
     </div>
 
-    
 
-  
+
+
     <div class="modal fade appointmentPopup" id="UpdateAppointmentPopup" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog appointPopupHead">
             <div class="modal-content">
@@ -534,7 +617,6 @@
 
                     <form ng-submit="UpdateAppointment(appointmentform)" name="updateappointmentform" novalidate class="css-form">
                         <div class="modal-body appointPopupBody" ng-hide="ShowAddAppointmentPopup">
-
                             <div class="row popupDeatailDiv">
                                 <div class="col-md-6">
                                     <div class="detailText">
@@ -786,7 +868,7 @@
     </div>
 
 
-   
+
 
 
 </div>
