--- a/AngularMvcProject/App/View/Setting/Services.html
+++ b/AngularMvcProject/App/View/Setting/Services.html
@@ -433,7 +433,7 @@
                                         <div class="form-group">
                                             <label class="control-label col-md-4 col-sm-4 col-xs-12">Service Cost (£)</label>
                                             <div class="col-md-8 col-sm-8 col-xs-12">
-                                                <input type="text" class="form-control" id="text" placeholder="Cost for the Service" name="text" ng-model="ServiceCost">
+                                                <input type="text" class="form-control" id="text" placeholder="Cost for the Service" name="ServiceCost" ng-model="ServiceCost">
                                             </div>
                                         </div>
                                         <div class="form-group">
