--- a/AngularMvcProject/App/View/wizard/wizard.html
+++ b/AngularMvcProject/App/View/wizard/wizard.html
@@ -569,7 +569,7 @@
                                                 <div class="col-md-2 col-sm-2 col-xs-12">
 
                                                     <div class="form-group ">
-                                                        <input type="text" class="form-control" ng-model="service.DurationInMinutes" ng-blur="EditService(service)" id="" placeholder="">
+                                                        <input type="text" class="form-control" ng-model="service.DurationInMinutes" ng-blur="EditService(service)" name="ServiceDuration" id="" placeholder="">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-2 col-sm-2 col-xs-12">
